<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/popular"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#AE1717"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/most_popular_movies"
            android:textColor="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_popular_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/top_rated"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#AE1717"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/highest_rated_movies"
            android:textColor="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_top_rated_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/on_air"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#AE1717"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/on_air_state"
            android:textColor="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_onair_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>